Physics/Compound Bug #42437

Closed
opened 2014-10-29 19:40:07 +01:00 by Karja Krähwald · 6 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 9e963ae (2.72b release) + 4852936

Short description of error
Blender crashes on Game Start if physics settings are adjusted in a specific way.
Difficult to sum up, but easy to reproduce - please jump to file.

Exact steps for others to reproduce the error
CompoundBug.blend

Game Engine:

  • Add an Empty.

    • Set physics to Static.
    • Enable Compound. (under Collision Bounds)
  • Add a Cube.

    • Set physics to Dynamic.
    • Enable Compound.
  • Parent Cube to Empty.

Crash: Start Game Engine.

Note: Found out that this crash happens only if the parent is an Empty.
Mesh parents wont crash with this setup.

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 9e963ae (2.72b release) + 4852936 **Short description of error** Blender crashes on Game Start if physics settings are adjusted in a specific way. Difficult to sum up, but easy to reproduce - please jump to file. **Exact steps for others to reproduce the error** [CompoundBug.blend](https://archive.blender.org/developer/F120203/CompoundBug.blend) Game Engine: - Add an Empty. - Set physics to Static. - Enable Compound. (under Collision Bounds) - Add a Cube. - Set physics to Dynamic. - Enable Compound. - Parent Cube to Empty. **Crash:** Start Game Engine. Note: Found out that this crash happens only if the parent is an Empty. Mesh parents wont crash with this setup.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Jorge Bernal self-assigned this 2015-02-17 08:45:46 +01:00
Member

Proposed fix D1115

Proposed fix [D1115](https://archive.blender.org/developer/D1115)

This issue was referenced by 4ed8b70870

This issue was referenced by 4ed8b708700af9e80c71e4c82897fbe3cee64e41
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 4ed8b70870.

Closed by commit 4ed8b70870.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42437
No description provided.